可以查看文件

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
         <textarea id="file-editor"></textarea>
         <button id="save-btn" style="display: none;">保存修改</button>
     </div>
+    <div id="error-message" style="color: red;"></div>
+    <div id="debug-output" style="white-space: pre-wrap; word-wrap: break-word;"></div>
     <script src="app.js"></script>
 </body>
 </html>
