1、修改增加文件夹的表单显示问题。 2、增加文件夹的root路径选择

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitHub文件管理系统</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jsencrypt/3.2.1/jsencrypt.min.js"></script> -->
      <script src="./jsencrypt.js"></script>
@@ -19,8 +18,8 @@
         </div>
         <div id="user-info" style="display: none;"></div>
         <div id="file-actions" style="display: none;">
-            <button id="new-file-btn"><i class="fas fa-plus"></i> 新建文件</button>
-            <button id="batch-delete-btn"><i class="fas fa-trash"></i> 批量删除</button>
+            <button id="new-file-btn" onclick="showNewFileForm()"><i class="fas fa-plus"></i> 新建文件</button>
+            <button id="new-folder-btn" onclick="showNewFolderForm()"><i class="fas fa-folder-plus"></i> 新建文件夹</button>
             <button id="refresh-btn"><i class="fas fa-sync-alt"></i> 刷新</button>
             <button id="logout-btn" style="display: none;"><i class="fas fa-sign-out-alt"></i> 退出</button>
         </div>
