1、增加文件批量删除 2、增加时间显示与文件大小显示

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <div id="file-actions" style="display: none;">
             <button id="new-file-btn" onclick="showNewFileForm()"><i class="fas fa-plus"></i> 新建文件</button>
             <button id="new-folder-btn" onclick="showNewFolderForm()"><i class="fas fa-folder-plus"></i> 新建文件夹</button>
+            <button id="batch-delete-btn"><i class="fas fa-trash"></i> 批量删除</button>
             <button id="refresh-btn"><i class="fas fa-sync-alt"></i> 刷新</button>
             <button id="logout-btn" style="display: none;"><i class="fas fa-sign-out-alt"></i> 退出</button>
         </div>
